Querying test works with get